<resources>
    <string name="app_name">Shoe Store</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_email_hint">Type here your e-mail</string>
    <string name="login_email_label">E-mail:</string>
    <string name="login_password_label">Password:</string>
    <string name="login_password_hint">Type your password here</string>
    <string name="login_checkbox_remember_me">Remember me</string>
    <string name="shoe_store_main_logo_content_description">Shoe Store main logo</string>
    <string name="login_button_create_new_acc">Create a new account</string>
    <string name="login_button_login_existing_acc">Login into existing account</string>
    <string name="onboarding_welcome_title">Welcome to Shoe Store app!</string>
    <string name="onboarding_dont_show_again">Do not show this again</string>
    <string name="onboarding_text">On this app, you can check out the best and most comfortable shoes and shop them in a quick and painless way!\n\nOur app is designed to be used for all kind of publics, and with the best selection of shoes from all ages, styles, colors and more!\n\nLooking for a classic shoe for a formal event, such as business meetings, weedings, proms? We have it!\n\nLooking for something more modern, stilish, slicky? We have it too!\n\n\n\nIf you get lost or need any kind of support, access the help menu located on the top left menu button with a question mark icon (?).</string>
    <string name="instructions_title">Instructions</string>
    <string name="instructions_text">The next screen is the list of shoes available on the store. Click on one of the shoes to see the details of that shoe.\n\nOn the shoe details screen, you can check better images of that shoe, more details about it such as available sizes, colors, pricing, etc.\n\nOn that screen you can confirm your choice and put it in the shopping cart.\n\nYou can navigate between the screens by using the top left back button and the navigation drawer on main shoe list screen.\n\n\n\nReminder: If you get lost or need any kind of support, access the help menu located on the top left menu button with a question mark icon (?).</string>
    <string name="shoeList_title">Choose your shoe</string>
    <string name="shoe_image_placeholder_content_description">Shoe image</string>
    <string name="shoe_name_placeholder">Shoe name</string>
    <string name="add_shoe_button_content_description">Add shoe button</string>
</resources>
