<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorMainLogoBackground"
        tools:context=".ui.LoginFragment">

    <ImageView
            android:id="@+id/loginLogo"
            android:layout_width="wrap_content"
            android:layout_height="350dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/shoe_store_main_logo_content_description"
            android:src="@drawable/shoe_store_main_logo"
            app:layout_constraintBottom_toTopOf="@+id/loginEmailLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/loginEmailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:text="@string/login_email_label"
            app:layout_constraintBottom_toTopOf="@+id/loginEmailField"
            app:layout_constraintStart_toStartOf="@+id/loginEmailField"
            app:layout_constraintTop_toBottomOf="@+id/loginLogo" />

    <EditText
            android:id="@+id/loginEmailField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:ems="10"
            android:hint="@string/login_email_hint"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@+id/loginPasswordLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginEmailLabel"
            tools:text='test@example.com' />

    <TextView
            android:id="@+id/loginPasswordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:text="@string/login_password_label"
            app:layout_constraintBottom_toTopOf="@+id/LoginPasswordField"
            app:layout_constraintStart_toStartOf="@+id/LoginPasswordField"
            app:layout_constraintTop_toBottomOf="@+id/loginEmailField" />

    <EditText
            android:id="@+id/LoginPasswordField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:ems="10"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/loginRememberMe"
            app:layout_constraintStart_toStartOf="@+id/loginEmailField"
            app:layout_constraintTop_toBottomOf="@+id/loginPasswordLabel"
            tools:text="abcdefgh" />

    <CheckBox
            android:id="@+id/loginRememberMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_checkbox_remember_me"
            app:layout_constraintStart_toStartOf="@+id/LoginPasswordField"
            app:layout_constraintTop_toBottomOf="@+id/LoginPasswordField" />

    <Button
            android:id="@+id/login_button_existing_acc"
            android:layout_width="242dp"
            android:layout_height="54dp"
            android:layout_marginTop="36dp"
            android:backgroundTint="@color/colorActionButton"
            android:text="@string/login_button_login_existing_acc"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginRememberMe"
            app:layout_constraintVertical_bias="0.0" />

    <Button
            android:id="@+id/login_button_new_acc"
            android:layout_width="242dp"
            android:layout_height="54dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:backgroundTint="@color/colorActionButton"
            android:text="@string/login_button_create_new_acc"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_button_existing_acc"
            app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>

