<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorMainLogoBackground">

    <TextView
            android:id="@+id/onboardingTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/onboarding_margin_horizontal"
            android:layout_marginTop="@dimen/onboarding_margin_vertical"
            android:layout_marginEnd="@dimen/onboarding_margin_horizontal"
            android:layout_marginBottom="@dimen/onboarding_margin_vertical"
            android:ellipsize="marquee"
            android:fontFamily="cursive"
            android:gravity="center_horizontal"
            android:singleLine="true"
            android:text="@string/onboarding_welcome_title"
            android:textSize="38sp"
            android:textStyle="bold|italic" />

    <VideoView
            android:id="@+id/onboardingVideo"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="@dimen/onboarding_margin_horizontal"
            android:layout_marginEnd="@dimen/onboarding_margin_horizontal"
            android:layout_marginBottom="@dimen/onboarding_margin_vertical"
            android:visibility="visible" /> <!-- TODO: insert here video and make it visible -->

    <TextView
            android:id="@+id/onboardingText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/onboarding_margin_horizontal"
            android:layout_marginEnd="@dimen/onboarding_margin_horizontal"
            android:layout_marginBottom="@dimen/onboarding_margin_vertical"
            android:scrollbars="vertical"
            android:text="@string/onboarding_text"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="14sp" />

    <CheckBox
            android:id="@+id/onboardingDontShowAgain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/onboarding_margin_horizontal"
            android:layout_marginTop="@dimen/onboarding_margin_vertical"
            android:layout_marginEnd="@dimen/onboarding_margin_horizontal"
            android:text="@string/onboarding_dont_show_again" />
</LinearLayout>